--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
+  "homepage": "https://kr4mpu5-cont-ed.github.io/hw-20/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
